--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 <main>
   <form id="form" method="POST">
     <label for="name">Name</label>
-    <input id="name" name="name" type="text" maxlength="25"/>
+    <input id="name" name="name" type="text" maxlength="25" value="pir"/>
     <label for="email">Email</label>
-    <input id="email" name="email" type="email" maxlength="25"/>
+    <input id="email" name="email" type="email" maxlength="25" value="man@ok.el"/>
     <label for="userMessage">Message</label>
-    <input id="userMessage" name="userMessage" type="text" maxlength="25"/>
+    <input id="userMessage" name="userMessage" type="text" maxlength="25" value="idi v zhopu"/>
 
     <button  class="btn" type="submit" id="submit-button">Send Message</button>
   </form>
