--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
             fill in the form, and I'll get back to you as soon as possible.
           </p>
         </div>
-        <span>        
+        <div>        
           <form id="form" method="POST" novalidate>
             <span>
               <label for="name">Name</label>
@@ -194,7 +194,7 @@
             <button  class="contact-me btn" type="submit" id="submit-button">Send Message</button>
           </form>
           <div id="message"></div>
-        </span>
+        </div>
       </div>
       
     <div class="footer-links">
