--- a/index.html
+++ b/index.html
@@ -175,21 +175,21 @@
         </div>
         <div>        
           <form id="form" method="POST" novalidate>
-            <span>
+            <div>
               <label for="name">Name</label>
               <input id="name" name="name" type="text" placeholder="Name" maxlength="35"/>
               <div id="invalid-message-name" class="invalid-message"></div>
-            </span>
-            <span>
+            </div>
+            <div>
               <label for="email">Email</label>
               <input id="email" name="email" type="email" placeholder="Email" maxlength="35"/>
               <div id="invalid-message-email" class="invalid-message"></div>
-            </span>
-            <span>
+            </div>
+            <div>
               <label for="userMessage">Message</label>
               <textarea id="userMessage" name="userMessage" type="text" placeholder="Message" rows="4"></textarea>
               <div id="invalid-message-message" class="invalid-message"></div>
-            </span>
+            </div>
         
             <button  class="contact-me btn" type="submit" id="submit-button">Send Message</button>
           </form>
