small change textarea

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
             </div>
             <div>
               <label for="userMessage">Message</label>
-              <textarea id="userMessage" name="userMessage" type="text" placeholder="Message" rows="4"></textarea>
+              <textarea id="userMessage" name="userMessage" placeholder="Message" rows="4"></textarea>
               <div id="invalid-message-message" class="invalid-message"></div>
             </div>
         
